# TimeHub

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.forgejo/workflows/: build.yml
.github/workflows/: build.yml  deploy.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_import_formats.py  0003_salesforce_user_fields.py  0004_import_transforms.py  0005_import_sample_data.py  0006_ai_hints.py  0007_invert_column_map.py  0008_multi_target_sync.py  0009_per_user_projects.py  0010_status_indexes.py  (+9 more)
app/: config.py  db.py  deps.py  identity.py  main.py  mcp_server.py  scope_mw.py  security.py
docs/: agent-hub-registration.md  anforderungen.md  backup.md  bcs-integration.md  export-konzept.md  mindcode-migration-runbook.md  salesforce-integration.md  vibe-coding-anforderungen.md
scripts/: backup.env.example  backup.sh  entrypoint.sh  migrate_pg_to_sqlite.py  restore.sh  transfer_user_data.py
tests/: conftest.py  test_ai_mapping.py  test_ai_refine.py  test_api_key_scopes.py  test_backup_restore.py  test_base_path.py  test_bcs_push.py  test_bom_and_empty_filters.py  test_calendar.py  test_csv_robustness.py  test_csv_roundtrip.py  test_dashboard.py  test_dashboard_crud_and_preview.py  test_data_isolation.py  test_database_url.py  test_duration_humanized.py  test_entries_themes_profile.py  test_entry_sync.py  test_format_fixes.py  test_format_ux.py  test_identity.py  test_identity_settings.py  test_import_formats.py  test_jira_export.py  test_login_removed.py  test_m365.py  test_m365_sso.py  test_mcp.py  test_medium_fixes.py  test_migrations.py  test_per_user_projects.py  test_pg_to_sqlite_migration.py  test_profile_api_keys.py  test_reports_and_times.py  test_salesforce_oauth.py  test_salesforce_sync.py  test_saved_views.py  test_security_hardening.py  test_sf_push.py  test_smoke.py  (+5 more)
(+123 files in other folders)
